// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DoodStream can guess height from title 1`] = `
[
  {
    "label": "DoodStream",
    "meta": {
      "countryCode": "fr",
      "height": 720,
      "title": "Black Mirror S04E02 FRENCH 720p WEB x264-RiPiT",
    },
    "requestHeaders": {
      "Referer": "http://dood.to/",
    },
    "sourceId": "doodstream_fr",
    "ttl": 900000,
    "url": "https://ee317r.cloudatacdn.com/u5kj63yvxddlsdgge7qremqqka27irwiupc4k7o5cikbhjliz6xwv2xr53uq/lco4d3heif~mocked-random-string?token=fh3rdlhjvao7chgxndsi3ra7&expiry=639837296000",
  },
]
`;

exports[`DoodStream dood.to 1`] = `
[
  {
    "label": "DoodStream",
    "meta": {
      "bytes": 791702409,
      "countryCode": "de",
      "title": "des-teufels-bad-2024",
    },
    "requestHeaders": {
      "Referer": "http://dood.to/",
    },
    "sourceId": "doodstream_de",
    "ttl": 900000,
    "url": "https://aa360cc.cloudatacdn.com/u5kjv4jxytd3sdgge5uogji5dg4huat2pxrm2qibdbm5rlyusvl46iz3u3ta/1f4isxg0tw~mocked-random-string?token=7uebebipnnhusa4xnyea1er4&expiry=639837296000",
  },
]
`;

exports[`DoodStream doodster 1`] = `
[
  {
    "label": "DoodStream",
    "meta": {
      "countryCode": "de",
      "title": "Brokeback Mountain 2005",
    },
    "requestHeaders": {
      "Referer": "http://dood.to/",
    },
    "sourceId": "doodstream_de",
    "ttl": 900000,
    "url": "https://ijs155l.cloudatacdn.com/u5kj2rz5qtdlsdgge4hrgj2flz5cjodea6auatveaphxogr2vvukxfzmwzva/egprvdjvpr~mocked-random-string?token=fbsg3301phkef2s4swo8bssg&expiry=639837296000",
  },
]
`;

exports[`DoodStream missing pass_md5 -> not found 1`] = `[]`;
